buildscript {
    ext {
        springBootVersion                 = "3.1.1"
        springDependencyManagementVersion = "1.1.4"
        jupiterVersion                    = "5.9.3"
        mockitoVersion                    = "4.8.1"
        assertjVersion                    = "3.24.2"
        lombokVersion                     = "1.18.30"
        jsoupVersion                      = "1.18.1"
    }
}

plugins {
    id "java"
    id "org.springframework.boot" version "${springBootVersion}"
    id "io.spring.dependency-management" version "${springDependencyManagementVersion}"
}

group = "com"
version = "0.1.0"

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // spring
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    developmentOnly "org.springframework.boot:spring-boot-devtools"

    // lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // db
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    // hwpx lib
    implementation 'kr.dogfoot:hwplib:1.1.10'
    implementation 'kr.dogfoot:hwpxlib:1.0.7'
    implementation fileTree(dir: 'libs', includes: ['*.jar'])

    // html parser
    implementation "org.jsoup:jsoup:${jsoupVersion}"

    // test
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testImplementation 'com.h2database:h2'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
}

tasks.named("test") {
    useJUnitPlatform()
}
